--- a/templates/students/index.html
+++ b/templates/students/index.html
@@ -8,6 +8,20 @@
 <body>
     <div class="container">
         <h1 class="text-danger text-center" > Welcome to your first template in flask</h1>
+        <h2> Students list </h2>
+<!--        {{students}}-->
+        <table class="table">
+            <tr> <th>ID</th> <th>Name</th> <th>Track</th> <th> Show</th></tr>
+        {% for student in students %}
+                <tr>
+                    <td> {{student['id']}}</td>
+                     <td> {{student['name']}}</td>
+                     <td> {{student['track']}}</td>
+                    <td> <a href="{{url_for('students.show', id=student['id'])}}" class="btn btn-info" > Show</a></td>
+                </tr>
+            {% endfor %}
+
+        </table>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
